cmake_minimum_required(VERSION 3.0.0)
project(Ch3 VERSION 0.1.0)

include(CTest)
enable_testing()

include_directories(../include)
file (GLOB SOURCES src/*.cpp)   # file(GLOB...) allows for wildcard additions:
add_executable(Ch3 ${SOURCES})

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
